--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,10 @@
 {
-  "build": {
-    "env": {
-      "@labs:registry": "${NPM_CONFIG_REGISTRY}",
-      "//gitlab.com/api/v4/packages/npm/:_authToken": "${NPM_AUTH_TOKEN}"
+  "env": {
+    "NPM_AUTH_TOKEN": {
+      "type": "secret"
     }
-  }
+  },
+  "files": [
+    ".npmrc"
+  ]
 }
