--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @labs:registry=https://gitlab.gazin.com.br/api/v4/packages/npm/
-//gitlab.gazin.com.br/api/v4/packages/npm/:_authToken=${NPM_AUTH_TOKEN}
+//gitlab.gazin.com.br/api/v4/packages/npm/:_authToken=${NPM_TOKEN}
